examples/test_package/Double_dc_no_hash_full_tool/steps/benchzebra_precise_run2/#test_analysis_3_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**  
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**  
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses and their attributes based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, test results, and potential issues.

---

#### **3. Test Results Summary**  
The provided code fails during execution with the following error:  
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Query:**  
The query `zebra(Houses)` fails because the predicate `member/2` is not defined in the ProbLog program. The error occurs at line 4 of the code.

---

#### **4. Failure Localization**  
- **Failed Predicate:** `member/2`  
- **Location:** Line 4 of the code.  
- **Issue:** The predicate `member/2` is used in the code but is not defined. The error indicates that ProbLog cannot find any clauses for this predicate.  
- **Expected Behavior:** The `member/2` predicate should be defined to check if an element is a member of a list.  

**Code Block with Issue:**  
```prolog
member(house(english, red, _, _, _), Houses),
member(house(spanish, _, dog, _, _), Houses),
...
```

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:** The logic of the puzzle is correctly implemented in the constraints, but the missing `member/2` predicate prevents the program from running.  
- **Recursive Termination:** The auxiliary predicates (`right_of/3`, `next_to/3`) are correctly defined and should terminate properly.  
- **Probabilistic Context:** The code does not use probabilistic facts or DeepProbLog features, so no probabilistic rules are violated.  

**Missing Definition:**  
The `member/2` predicate is a standard Prolog predicate but is not included in the ProbLog program. It should be defined as follows:  
```prolog
member(X, [X|_]).
member(X, [_|T]) :- member(X, T).
```

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** The puzzle constraints are correctly implemented, but the missing `member/2` predicate prevents execution.  
  - **Probabilistic Reasoning:** Not applicable in this context.  
  - **Neural Network Integration:** Not used.  

- **Edge Cases:**  
  - The input to `member/2` must be a list; otherwise, the predicate will fail.  
  - The recursive predicates (`right_of/3`, `next_to/3`) handle edge cases like empty lists or invalid inputs gracefully.  

---

#### **7. Error Summary**  

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|---------------------------------|-------------------------------------|
| 1      | Missing `member/2` predicate     | Program fails to execute        | Define `member/2` as shown above.   |
| 2      | No probabilistic features used   | N/A                             | Report: "DeepProbLog feature not used." |

---

#### **8. Conclusion**  
The Zebra Puzzle implementation is logically sound but fails due to the missing `member/2` predicate. Once this predicate is defined, the program should execute correctly. No probabilistic or DeepProbLog features are used in this implementation.  

**Word Count:** ~400 words.  

--- 

**Final Note:**  
To resolve the issue, add the `member/2` predicate definition to the ProbLog program. The rest of the implementation adheres to the puzzle's requirements.